Added developer control to make "Reset kit" not touch molecules in collection boxes
# 0.00.11 (51284) Apr 27, 2011
Moved "Reset kit" button to the upper-left of kit area
Removed "duplicate" molecule definitions
Added in structural formulas, taking into account alcohol (hydroxyl) groups
# 0.00.10 (51253) Apr 27, 2011
Removed text on blue hint arrow
Jmol 3D view uses same color scheme for atoms
# 0.00.09 (51242) Apr 27, 2011
Added blue "Collect your molecule!" arrow on 1st molecule that can be collected
While 3D view is open for a molecule, its '+' for 3D view button is grayed out (disabled)
Can only open 1 3D view for each molecule, and it closes whenever the molecule is hidden (broken, kit changes, put in collection box, etc)
Showing of 3D view dialog is immediate, and shows a "loading" message.
Bugfix: added NO2 as a potential molecule
# 0.00.08 (51043) Apr 21, 2011
Added developer controls to allow generation of all molecules for boxes AND/OR allowing isotopes of the target molecule in collection boxes
Reset kit fixes
Moved kit arrows/label and reset button
Show only molecule name above molecules
# 0.00.07 (51020) Apr 21, 2011
4/21/11 Bugfix
# 0.00.06 (51012) Apr 21, 2011
# 0.00.05 (51010) Apr 21, 2011
4/21/11 Kit / collection cleanup, added 3d, pulls ~1600 compounds from pubchem
Added 3d to the table
Added a table to show all the molecules
Added a "+" button to show molecule in 3D
4/20/11 Major reworking of molecule handling. 1602 complete molecules are allowed
# 0.00.03 (50650) Apr 14, 2011
4/14/11 Kit and molecule bonding / movement demo version
# 0.00.02 (50616) Apr 13, 2011
4/13/11 >Publishing a snapshot.  May be used for initial demonstration.
Initial support for having atoms animate back to the buckets when dropped in the kit area
# 0.00.01 (50229) Mar 30, 2011
3/30/11 Tab mock-up