@@ -1,4 +1,3 @@
-Try out "opposing arrows" mouse-over to break bonds. Or change cursor
 '+' to view 3d from collection box
 Add BCE sound ding + bottom of collection box
 Process molecule lists instead of (<=4 heavy) to (works with our kits)
@@ -17,3 +16,4 @@ EVALUATION:
 Possibly attempt to generate less kits? PENDING feedback
 Developer option to make "Reset kit" not pull from collection box
 Icons
+Bond breaking and icons to do so
