@@ -1,3 +1,5 @@
+Added single bond break user interface (cursor with arrows), and developer control to disable it if desired
+Changed icons for 3D view and break molecule
 Added developer control to make "Reset kit" not touch molecules in collection boxes
 # 0.00.11 (51284) Apr 27, 2011
 Moved "Reset kit" button to the upper-left of kit area
